hphp/hack/test/typecheck/global_const24.php
<?hh

const mixed X = ++X;
